--- a/.i3/config
+++ b/.i3/config
@@ -14,6 +14,7 @@ bindsym $mod+d            exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+Shift+d      exec --no-startup-id dmenu_run
 bindsym $mod+Escape       exec --no-startup-id i3-sensible-terminal -e "/usr/bin/htop"
 bindsym $mod+Shift+Escape exec --no-startup-id i3-sensible-terminal -e "/usr/bin/alsamixer"
+bindsym $mod+BackSpace    exec --no-startup-id /usr/bin/thunar
 
 bindsym $mod+Shift+q kill
 bindsym $Alt+F4      kill
@@ -46,7 +47,7 @@ bindsym $mod+a focus parent
 bindsym $mod+b focus child
 
 # assign: use xorg-xprop to learn the class string
-assign [class="^Chromium$|Firefox|dwb"] 2
+# assign [class="^Chromium$|Firefox|dwb"] 2
 
 bindsym $mod+o       move workspace to output HDMI1
 bindsym $mod+Shift+o move workspace to output LVDS1
@@ -152,8 +153,7 @@ exec --no-startup-id /usr/bin/dropboxd
 exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id "/usr/bin/emacs --daemon"
 exec --no-startup-id "/usr/bin/hsetroot -solid '#111019'"
-exec --no-startup-id /usr/bin/mpd
-exec --no-startup-id "/usr/bin/mpdas -d -c ~/.mpdasrc"
+exec --no-startup-id /usr/bin/mpd, exec --no-startup-id "/usr/bin/mpdas -d -c $HOME/.mpdasrc"
 exec --no-startup-id /usr/bin/nm-applet
 exec --no-startup-id /usr/bin/parcellite
 exec --no-startup-id /usr/bin/redshift
