--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,5 +1,9 @@
 separator_block_width=12
 
+[mpd]
+command=/usr/bin/mpc current
+interval=10
+
 [volume]
 command=/usr/libexec/i3blocks/volume
 signal=10
