--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -6,11 +6,11 @@ interval=10
 
 [volume]
 command=/usr/libexec/i3blocks/volume
-signal=10
+signal=30
 
-# [memory]
-# command=/usr/libexec/i3blocks/memory
-# interval=30
+[memory]
+command=/usr/libexec/i3blocks/memory swap
+interval=30
 
 [disk-home]
 command=/usr/libexec/i3blocks/disk /
@@ -36,4 +36,4 @@ interval=30
 
 [time]
 command=date '+%Y-%m-%d %H:%M kw%V'
-interval=5
+interval=10
