--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,5 +1,5 @@
 MAKEFLAGS="-j5 -l4"
-PKGDEST=${AURHOME}/cache
+PKGDEST=$HOME/.aur/cache
 PACKAGER="Thiago Perrotta <thiagoperrotta95@gmail.com>"
 CFLAGS="-march=native -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
 CXXFLAGS="${CFLAGS}"
