--- a/.i3/config
+++ b/.i3/config
@@ -14,7 +14,7 @@ bindsym $mod+d            exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+Shift+d      exec --no-startup-id dmenu_run
 bindsym $mod+Escape       exec --no-startup-id i3-sensible-terminal -e "/usr/bin/htop"
 bindsym $mod+Shift+Escape exec --no-startup-id i3-sensible-terminal -e "/usr/bin/alsamixer"
-bindsym $mod+BackSpace    exec --no-startup-id /usr/bin/thunar
+bindsym $mod+BackSpace    exec --no-startup-id /usr/bin/pcmanfm
 
 bindsym $mod+m       move scratchpad
 bindsym $mod+Shift+m scratchpad show
@@ -140,24 +140,6 @@ workspace_layout               default
 
 # xprop to learn class strings
 for_window [window_role="pop-up"] floating enable, move absolute center
-for_window [class="Firefox|^Emacs$|Zathura|URxvt|Calibre|Google-chrome-stable"] border 1pixel
+for_window [class="Firefox|^Emacs$|Zathura|URxvt|Calibre|Google-chrome-stable|Spotify"] border 1pixel
 for_window [class="Arandr|Epsxe|feh|Galculator|gimp|Java|Lxappearance|MPlayer|Viewnior|qtRaytracer"] floating enable
-
-# xprop to learn class strings
 # assign [class="^Chromium$|Firefox|dwb"] 2
-
-exec --no-startup-id "/usr/bin/autocutsel -fork"
-exec --no-startup-id "/usr/bin/autocutsel -selection PRIMARY -fork"
-exec --no-startup-id "/usr/bin/compton -b"
-exec --no-startup-id "/usr/bin/CopyAgent"
-exec --no-startup-id "/usr/bin/dropboxd"
-exec --no-startup-id "/usr/bin/dunst"
-exec --no-startup-id "/usr/bin/emacs --daemon"
-exec --no-startup-id "/usr/bin/hsetroot -solid '#222222'"
-exec --no-startup-id "/usr/bin/mpd"
-exec --no-startup-id "/usr/bin/mpdas -d -c $HOME/.mpdasrc"
-exec --no-startup-id "/usr/bin/nm-applet"
-exec --no-startup-id "/usr/bin/parcellite"
-exec --no-startup-id "/usr/bin/redshift"
-exec --no-startup-id "/usr/bin/thunar --daemon"
-# exec --no-startup-id "/usr/bin/udiskie --tray"
