--- a/.i3/config
+++ b/.i3/config
@@ -10,6 +10,7 @@ font pango:Terminus 9.0
 
 bindsym $mod+Return       exec --no-startup-id i3-sensible-terminal
 bindsym $mod+Shift+Return exec --no-startup-id "/usr/bin/emacsclient -c"
+bindsym $mod+c            exec --no-startup-id google-chrome-stable
 bindsym $mod+d            exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+Shift+d      exec --no-startup-id dmenu_run
 bindsym $mod+Escape       exec --no-startup-id i3-sensible-terminal -e "/usr/bin/htop"
