--- a/.i3/config
+++ b/.i3/config
@@ -9,13 +9,13 @@ floating_modifier $mod
 font pango:Terminus 9.0
 
 bindsym $mod+Return       exec --no-startup-id i3-sensible-terminal
-bindsym $mod+Shift+Return exec --no-startup-id "/usr/bin/emacsclient -c"
+bindsym $mod+Shift+Return exec --no-startup-id "emacsclient -c"
 bindsym $mod+c            exec --no-startup-id google-chrome-stable
 bindsym $mod+d            exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+Shift+d      exec --no-startup-id dmenu_run
-bindsym $mod+Escape       exec --no-startup-id i3-sensible-terminal -e "/usr/bin/htop"
-bindsym $mod+Shift+Escape exec --no-startup-id i3-sensible-terminal -e "/usr/bin/alsamixer"
-bindsym $mod+BackSpace    exec --no-startup-id /usr/bin/pcmanfm
+bindsym $mod+Escape       exec --no-startup-id i3-sensible-terminal -e htop
+bindsym $mod+Shift+Escape exec --no-startup-id i3-sensible-terminal -e alsamixer
+bindsym $mod+BackSpace    exec --no-startup-id pcmanfm
 
 bindsym $mod+o move scratchpad
 bindsym $mod+m scratchpad show
