--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,4 +1,3 @@
-; Global settings
 [redshift]
 temp-day=5500
 temp-night=3700
@@ -7,14 +6,11 @@ gamma=0.8
 location-provider=manual
 adjustment-method=vidmode
 
-; Rio de Janeiro
-[manual]
-lat=-23
-lon=-43
-
-; In this example screen 1 is adjusted by vidmode. Note
-; that the numbering starts from 0, so this is actually
-; the second screen.
 [vidmode]
 screen=0
 screen=1
+
+;; Rio de Janeiro
+[manual]
+lat=-23
+lon=-43
