--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -6,15 +6,13 @@ interval=10
 
 [volume]
 command=/usr/libexec/i3blocks/volume
+color=#FFFF00
 signal=30
 
 [memory]
 command=/usr/libexec/i3blocks/memory swap
-interval=30
-
-[disk-home]
-command=/usr/libexec/i3blocks/disk $HOME
-interval=30
+color=#00FFFF
+interval=20
 
 [wireless]
 command=/usr/libexec/i3blocks/network wlp2s0 W
