--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,8 +1,8 @@
-MAKEFLAGS="-j4 -l3"
-PKGDEST=$HOME/.aur/cache
+MAKEFLAGS="-j$(nproc) -l$(nproc)"
 PACKAGER="Thiago Perrotta <thiagoperrotta95@gmail.com>"
 CFLAGS="-march=native -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
 CXXFLAGS="${CFLAGS}"
+PKGDEST="$HOME/.aur/cache"
 GPGKEY="A905373C"
 BUILDENV=(fakeroot !distcc color ccache check sign)
 SIGNPKG=y
