--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -14,7 +14,7 @@
     <family>sans-serif</family>
     <prefer>
       <!-- <family>DejaVu Sans</family> -->
-      <family>Open Sans</family>
+      <family>Fira Sans</family>
     </prefer>
   </alias>
   <alias>
@@ -22,17 +22,17 @@
     <family>monospace</family>
     <prefer>
       <!-- <family>DejaVu Sans Mono</family> -->
-      <family>Terminus</family>
+      <family>Source Code Pro</family>
     </prefer>
   </alias>
 
   <match target="pattern">
     <test name="family" qual="any">
       <!-- <string>DejaVu Sans</string> -->
-      <string>Open Sans</string>
+      <string>Fira Sans</string>
     </test>
     <edit mode="assign" name="family">
-      <string>Open Sans</string>
+      <string>Fira Sans</string>
     </edit>
   </match>
 
