following Allan's suggestion

--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -5,5 +5,5 @@ CXXFLAGS="${CFLAGS}"
 PKGDEST="$HOME/.aur/cache"
 GPGKEY="A905373C"
 BUILDENV=(fakeroot !distcc color ccache check sign)
-# SIGNPKG=y
+SIGNPKG=n
 # PKGEXT='.pkg.tar'
