--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,4 +1,6 @@
-separator_block_width=12
+[mpd]
+command=/usr/bin/mpc current
+interval=10
 
 [volume]
 command=/usr/libexec/i3blocks/volume
@@ -24,5 +26,5 @@ command=/usr/libexec/i3blocks/battery BAT1
 interval=30
 
 [time]
-command=date '+%Y-%m-%d %H:%M kw%V'
+command=date '+%Y-%m-%d %H:%M @%V'
 interval=10
