--- a/.gitconfig
+++ b/.gitconfig
@@ -1,30 +1,25 @@
-# -*- conf -*-
-
 [push]
-default = simple
-
+	default = simple
 [user]
-name = Thiago Perrotta
-email = thiagoperrotta95@gmail.com
-
+	name = Thiago Perrotta
+	email = thiagoperrotta95@gmail.com
 [credential]
-helper = store
-
+	helper = store
 [alias]
-lazy = commit -a -m "update"
-log1 = log --graph --decorate --oneline --pretty=format:\"%h %ad | %s%d [%an]\" --date=short
-log2 = log --graph --decorate --oneline --all
-puhs = push
-st = status
-
+	lazy = commit -a -m "update"
+	log1 = log --graph --decorate --oneline --pretty=format:\"%h %ad | %s%d [%an]\" --date=short
+	log2 = log --graph --decorate --oneline --all
+	puhs = push
+	st = status
 [core]
-whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
-
+	whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
 [color]
-ui = auto
-
-[merge]
-tool = emerge
-
+	diff = auto
+	status = auto
+	branch = auto
+	grep = auto
+	interactive = auto
+	showbranch = auto
+	ui = auto
 [github]
-user = thiagowfx
+	user = thiagowfx
