--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -4,12 +4,23 @@ color=#FFFF00
 signal=30
 
 [memory]
+command=/usr/libexec/i3blocks/memory
+color=#00FFFF
+interval=30
+separator=false
+
+[swap]
 command=/usr/libexec/i3blocks/memory swap
 color=#00FFFF
-interval=20
+interval=30
 
 [wireless]
 command=/usr/libexec/i3blocks/network wlp2s0 W
+color=#00FF00
+interval=10
+
+[ethernet]
+command=/usr/libexec/i3blocks/network enp1s0 E
 color=#00FF00
 interval=10
 
@@ -22,5 +33,5 @@ command=/usr/libexec/i3blocks/battery BAT1
 interval=30
 
 [time]
-command=date '+%Y-%m-%d %H:%M @%V'
+command=date '+%Y-%m-%d %H:%M kW%V'
 interval=10
