--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,13 +8,10 @@ set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+set -g default-terminal "screen-256color"
 set -g status-utf8 on
 set -g monitor-activity on
 set -g visual-activity on
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
 set -g status-fg white
 set -g status-bg black
 set -g window-status-fg cyan
@@ -23,3 +20,16 @@ set -g window-status-attr dim
 set -g window-status-current-fg white
 set -g window-status-current-bg red
 set -g window-status-current-attr bright
+set -g pane-border-fg green
+set -g pane-border-bg black
+set -g pane-active-border-fg white
+set -g pane-active-border-bg yellow
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+set -g mode-keys vi
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
