--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [push]
 	default = simple
 [user]
-	name = Thiago Perrotta
+	name = Thiago Barroso Perrotta
 	email = thiagoperrotta95@gmail.com
 [credential]
 	helper = store
