--- a/.gitconfig
+++ b/.gitconfig
@@ -7,9 +7,10 @@
 	helper = store
 [alias]
 	l = commit -a -m "update"
+  p = push
+	puhs = push
 	log1 = log --graph --decorate --oneline --pretty=format:\"%h %ad | %s%d [%an]\" --date=short
 	log2 = log --graph --decorate --oneline --all
-	puhs = push
 	st = status
 [core]
 	whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
