--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,6 +1,7 @@
 [volume]
-command=/usr/libexec/i3blocks/volume
+command=/usr/libexec/i3blocks/volume 0 pulse
 color=#FFFF00
+interval=30
 signal=30
 
 [memory]
@@ -13,6 +14,11 @@ separator=false
 command=/usr/libexec/i3blocks/memory swap
 color=#00FFFF
 interval=30
+
+[networkspeed]
+command=$HOME/.i3/measure-net-speed.bash
+interval=2
+color=#FF9234
 
 [wireless]
 command=/usr/libexec/i3blocks/network wlp2s0 W
@@ -27,6 +33,7 @@ interval=10
 [cpu]
 command=/usr/libexec/i3blocks/cpu
 interval=10
+color=#808080
 
 [battery]
 command=/usr/libexec/i3blocks/battery BAT1
@@ -35,3 +42,4 @@ interval=30
 [time]
 command=date '+%Y-%m-%d %H:%M kW%V'
 interval=10
+color=#CE11CD
