--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -30,13 +30,13 @@ command=/usr/libexec/i3blocks/network enp1s0 E
 color=#00FF00
 interval=10
 
-[cpu]
-command=/usr/libexec/i3blocks/cpu
+[load_average]
+command=/usr/libexec/i3blocks/load_average
 interval=10
 color=#808080
 
 [battery]
-command=/usr/libexec/i3blocks/battery BAT1
+command=/usr/libexec/i3blocks/battery
 interval=30
 
 [time]
