--- a/.i3/config
+++ b/.i3/config
@@ -183,8 +183,8 @@ for_window [window_role="pop-up"] floating enable
 bindsym Print exec scrot '%Y-%m-%d_%H%M%S_$wx$h_scrot.png' -e 'mv $f ~/Ramdisk/' && notify-send 'Took a SS'
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5 -time 0
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5 -time 0
-bindsym XF86AudioLowerVolume exec pulseaudio-ctl down && pkill -USR1 "^i3blocks"
-bindsym XF86AudioRaiseVolume exec pulseaudio-ctl up && pkill -USR1 "^i3blocks"
+bindsym XF86AudioLowerVolume exec pulseaudio-ctl down
+bindsym XF86AudioRaiseVolume exec pulseaudio-ctl up
 bindsym XF86AudioMute exec pulseaudio-ctl mute
 bindsym Shift+XF86AudioLowerVolume exec playerctl previous
 bindsym Shift+XF86AudioRaiseVolume exec playerctl next
