--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,43 +1,84 @@
+# i3blocks config file
+#
+# Please see man i3blocks for a complete reference!
+# The man page is also hosted at http://vivien.github.io/i3blocks
+#
+# List of valid properties:
+#
+# align
+# color
+# command
+# full_text
+# instance
+# interval
+# label
+# min_width
+# name
+# separator
+# separator_block_width
+# short_text
+# signal
+# urgent
+
+# Global properties
+separator_block_width=10
+
 [volume]
-command=/usr/libexec/i3blocks/volume 0 pulse
-color=#FFFF00
-interval=30
-signal=30
+label=♪
+instance=Master
+command=/usr/libexec/i3blocks/volume
+interval=once
+signal=10
+color=#ffff00
 
 [memory]
+label=MEM
 command=/usr/libexec/i3blocks/memory
-color=#00FFFF
-interval=30
 separator=false
+interval=30
+color=#47bdd5
 
 [swap]
-command=/usr/libexec/i3blocks/memory swap
-color=#00FFFF
+label=SWP
+instance=swap
+command=/usr/libexec/i3blocks/memory
 interval=30
+color=#47bdd5
 
 [networkspeed]
 command=$HOME/.i3/measure-net-speed.bash
-interval=2
-color=#FF9234
+interval=1
 
 [wireless]
-command=/usr/libexec/i3blocks/network wlp2s0 W
+label=W
+instance=wlp2s0
+command=/usr/libexec/i3blocks/network
 color=#00FF00
 interval=10
 
 [ethernet]
-command=/usr/libexec/i3blocks/network enp1s0 E
+label=E
+instance=enp1s0
+command=/usr/libexec/i3blocks/network
 color=#00FF00
 interval=10
 
-[load_average]
+#[cpu]
+#label=CPU
+#command=/usr/libexec/i3blocks/cpu_usage
+#interval=10
+#min_width=CPU: 100%
+#separator=false
+
+[load]
 command=/usr/libexec/i3blocks/load_average
 interval=10
-color=#808080
 
 [battery]
+label=⚡
 command=/usr/libexec/i3blocks/battery
 interval=30
+color=#808080
 
 [time]
 command=date '+%Y-%m-%d %H:%M kW%V'
