--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -21,7 +21,7 @@
 # urgent
 
 # Global properties
-separator_block_width=10
+separator_block_width=8
 
 [volume]
 label=♪
@@ -29,25 +29,26 @@ instance=Master
 command=/usr/libexec/i3blocks/volume
 interval=once
 signal=10
+interval=10
 color=#ffff00
 
 [memory]
 label=MEM
 command=/usr/libexec/i3blocks/memory
 separator=false
-interval=30
+interval=10
 color=#47bdd5
 
 [swap]
 label=SWP
 instance=swap
 command=/usr/libexec/i3blocks/memory
-interval=30
+interval=10
 color=#47bdd5
 
 [networkspeed]
 command=$HOME/.i3/measure-net-speed.bash
-interval=1
+interval=2
 
 [wireless]
 label=W
