--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,20 @@
-set -sg escape-time 1
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf!"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind C-a last-window
+set -sg escape-time 0
 set -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
+set -g base-index 1
 set -g default-terminal "screen-256color"
 set -g status-utf8 on
 set -g monitor-activity on
 set -g visual-activity on
+set -g visual-bell on
 set -g status-fg white
 set -g status-bg black
 set -g window-status-fg cyan
@@ -28,8 +31,10 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 set -g mode-keys vi
-bind Escape copy-mode
+set -g history-limit 100000
+setw -g aggressive-resize on
 unbind p
+bind Escape copy-mode
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
