--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf!"
+bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -14,7 +14,6 @@ set -g default-terminal "screen-256color"
 set -g status-utf8 on
 set -g monitor-activity on
 set -g visual-activity on
-set -g visual-bell on
 set -g status-fg white
 set -g status-bg black
 set -g window-status-fg cyan
