--- a/.i3/config
+++ b/.i3/config
@@ -24,7 +24,7 @@ font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
 # font pango:DejaVu Sans Mono 10
-font pango:Bitter 9 
+font pango:Roboto 9 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
