--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -23,6 +23,11 @@
 # Global properties
 separator_block_width=8
 
+[player]
+command=/usr/share/doc/i3blocks/contrib/mediaplayer
+interval=10
+color=#fbb9b9
+
 [volume]
 label=♪
 instance=Master
