--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g mouse-select-pane on
 set -g mouse-resize-pane on
 set -g mouse-select-window on
 set -g base-index 1
+setw -g pane-base-index 1
 set -g default-terminal "screen-256color"
 set -g status-utf8 on
 set -g monitor-activity on
