--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -21,7 +21,7 @@
 # urgent
 
 # Global properties
-separator_block_width=8
+separator_block_width=7
 
 [player]
 command=/usr/share/doc/i3blocks/contrib/mediaplayer
@@ -54,6 +54,7 @@ color=#47bdd5
 [networkspeed]
 command=$HOME/.i3/measure-net-speed.bash
 interval=3
+color=#BBBBBB
 
 [wireless]
 label=W
@@ -84,9 +85,9 @@ interval=10
 label=⚡
 command=/usr/libexec/i3blocks/battery
 interval=30
-color=#808080
+color=#BBBBBB
 
 [time]
 command=date '+%Y-%m-%d %H:%M kW%V'
 interval=10
-color=#CE11CD
+color=#DE21DD
