--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,12 @@
+set-option -g prefix C-b
+set-option -g prefix2 C-a
+bind-key C-b send-prefix
+bind-key C-a send-prefix -2
 bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind C-a last-window
 set -sg escape-time 0
 set -g mode-mouse on
 set -g mouse-select-pane on
@@ -12,6 +15,7 @@ set -g mouse-select-window on
 set -g base-index 1
 setw -g pane-base-index 1
 set -g default-terminal "screen-256color"
+setw -g utf8 on
 set -g status-utf8 on
 set -g monitor-activity on
 set -g visual-activity on
@@ -31,10 +35,10 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 set -g mode-keys vi
-set -g history-limit 100000
+set -g history-limit 10000
 setw -g aggressive-resize on
-unbind p
 bind Escape copy-mode
+unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
