--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,7 @@ set -g message-attr bright
 set -g mode-keys vi
 set -g history-limit 10000
 setw -g aggressive-resize on
+setw -g automatic-rename on
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
