--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf"
 set-option -g prefix C-b
-set-option -g prefix2 C-a
+# set-option -g prefix2 C-a
 bind-key C-b send-prefix
-bind-key C-a send-prefix -2
+# bind-key C-a send-prefix -2
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
