--- a/.i3/config
+++ b/.i3/config
@@ -101,6 +101,8 @@ bindsym $mod+a focus parent
 # focus the baby (child) container
 bindsym $mod+b focus child
 
+workspace_auto_back_and_forth yes
+
 # switch to workspace
 bindsym $mod+n workspace next
 bindsym $mod+Shift+n workspace prev
