--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,28 +1,86 @@
-set-option -g prefix C-b
-bind-key C-b send-prefix
-# set-option -g prefix2 C-a
-# bind-key C-a send-prefix -2
-bind r source-file ~/.tmux.conf \; display "Reloaded .tmux.conf"
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-set -sg escape-time 1
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# alternate prefix
+set-option -g prefix2 C-b
+bind-key C-b send-prefix -2
+
+# reload .tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloading .tmux.conf..."
+
+# go to last window
+bind-key C-a last-window
+bind-key C-b last-window
+
+# 0 is too far :)
 set -g base-index 1
 setw -g pane-base-index 1
-setw -g utf8 on
-set -g status-utf8 on
-set -g monitor-activity on
-set -g visual-activity on
+
+# arrange $TERM and colors
+set-option -g default-terminal "screen-256color"
+
+# mouse
+setw -g mode-mouse on
+set-option -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
+# vi
 set -g mode-keys vi
-set -g history-limit 10000
+set-option -g status-keys vi
+
+# visual and bell
+set-option -g bell-action any
+set-option -g visual-bell on
+set -g visual-activity on
+
+# monitor activity
+setw -g monitor-activity on
+
+# title
+set-option -g set-titles on
+
+# window number,program name,active (or not)
+set-option -g set-titles-string '#H:#S.#I.#P #W #T'
+
+# gentoo
+bind e previous-window
+bind f next-window
+
+set-option -g status-justify left
+set-option -g status-bg black
+set-option -g status-fg white
+set-option -g status-left-length 40
+set-option -g status-right-length 80
+
+set-option -g pane-active-border-fg green
+set-option -g pane-active-border-bg black
+set-option -g pane-border-fg white
+set-option -g pane-border-bg black
+
+set-option -g message-fg black
+set-option -g message-bg green
+
+setw -g window-status-bg black
+setw -g window-status-current-fg green
+setw -g window-status-bell-attr default
+setw -g window-status-bell-fg red
+setw -g window-status-content-attr default
+setw -g window-status-content-fg yellow
+setw -g window-status-activity-attr default
+setw -g window-status-activity-fg yellow
+
+set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
+set -g status-right '#[fg=green]][#[fg=white] #(tmux-mem-cpu-load 5 4) #[fg=green]][ #[fg=yellow]%H:%M#[default]'
+
+# UTF-8
+set-option -g status-utf8 on
+setw -g utf8 on
+
+# Misc Options
 setw -g aggressive-resize on
 setw -g automatic-rename on
-bind Escape copy-mode
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+set -sg escape-time 1
+set -g status-interval 5
+set -g history-limit 8192
