better tmux, merged from another two ones

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set-option -g prefix2 C-b
 bind-key C-b send-prefix -2
 
 # reload .tmux.conf
-bind r source-file ~/.tmux.conf \; display "Reloading .tmux.conf..."
+bind r source-file ~/.tmux.conf \; display "Config reloaded..."
 
 # go to last window
 bind-key C-a last-window
@@ -34,8 +34,6 @@ set-option -g status-keys vi
 set-option -g bell-action any
 set-option -g visual-bell on
 set -g visual-activity on
-
-# monitor activity
 setw -g monitor-activity on
 
 # title
@@ -44,7 +42,7 @@ set-option -g set-titles on
 # window number,program name,active (or not)
 set-option -g set-titles-string '#H:#S.#I.#P #W #T'
 
-# gentoo
+## gentoo
 bind e previous-window
 bind f next-window
 
@@ -73,6 +71,7 @@ setw -g window-status-activity-fg yellow
 
 set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
 set -g status-right '#[fg=green]][#[fg=white] #(tmux-mem-cpu-load 5 4) #[fg=green]][ #[fg=yellow]%H:%M#[default]'
+## end gentoo
 
 # UTF-8
 set-option -g status-utf8 on
@@ -81,6 +80,51 @@ setw -g utf8 on
 # Misc Options
 setw -g aggressive-resize on
 setw -g automatic-rename on
-set -sg escape-time 1
+set -sg escape-time 0 # faster key repetition
 set -g status-interval 5
 set -g history-limit 8192
+
+## tony/tmux-config
+bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+set-window-option -g clock-mode-colour green #green clock
+
+set -g status-justify centre # center align window list
+set -g status-left-length 20
+set -g status-right-length 140
+set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] %Y-%m-%d'
+## end tony/tmux-config
