--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,7 @@ bind-key C-b send-prefix -2
 bind r source-file ~/.tmux.conf \; display "Config reloaded..."
 
 # go to last window
-bind-key C-a last-window
-bind-key C-b last-window
+bind-key C-b last-pane
 
 # 0 is too far :)
 set -g base-index 1
