--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -68,13 +68,6 @@ command=/usr/libexec/i3blocks/network
 color=#00FF00
 interval=10
 
-#[cpu]
-#label=CPU
-#command=/usr/libexec/i3blocks/cpu_usage
-#interval=10
-#min_width=CPU: 100%
-#separator=false
-
 [load]
 command=/usr/libexec/i3blocks/load_average
 interval=5
@@ -89,3 +82,8 @@ color=#BBBBBB
 command=date '+%Y-%m-%d %H:%M kW%V'
 interval=10
 color=#DE21DD
+
+[name]
+command=echo 'Thiago Perrotta'
+interval=once
+color=#3de345
