--- a/.makepkg.conf
+++ b/.makepkg.conf
@@ -1,6 +1,6 @@
 MAKEFLAGS="-j$(nproc) -l$(nproc)"
-PACKAGER="Thiago Perrotta <thiagoperrotta95@gmail.com>"
+PACKAGER="$($HOME/_scripts/packager name) <$($HOME/_scripts/packager mail)>"
 CFLAGS="-march=native -mtune=generic -O2 -pipe -fstack-protector --param=ssp-buffer-size=4"
 CXXFLAGS="${CFLAGS}"
 BUILDENV=(fakeroot !distcc color !ccache check sign)
-SIGNPKG=n
+SIGNPKG=y
