--- a/.i3/config
+++ b/.i3/config
@@ -176,16 +176,13 @@ bar {
         mode dock
 
 colors {
-    # <bar>
-    background #222222
-    separator  #444444
-    statusline #666666
-
-    # <workclass>       <border> <bg> <text>
-    focused_workspace   #da2263 #d70a53 #ffffff
-    active_workspace    #565656 #444444 #ffffff
-    inactive_workspace  #373737 #222222 #888888
-    urgent_workspace    #ec7ea4 #eb709b #ffffff
+	separator  #888888
+	background #333333
+	statusline #FFFFFF
+	focused_workspace  #4E9C00 #4E9C00 #FFFFFF
+	active_workspace   #333333 #333333 #FFFFFF
+	inactive_workspace #333333 #333333 #888888
+	urgent_workspace   #C20000 #C20000 #FFFFFF
 }
 }
 
@@ -207,12 +204,9 @@ bindsym Shift+XF86AudioLowerVolume exec playerctl previous
 bindsym Shift+XF86AudioRaiseVolume exec playerctl next
 bindsym Shift+XF86AudioMute exec playerctl play-pause
 
-# <clientclass>		<border> <bg> <text> <indicator>
-client.focused          #da2263 #d70a53 #ffffff #eb709b
-client.focused_inactive	#565656 #444444 #ffffff #666666
-client.unfocused 	#373737 #222222 #888888 #444444
-client.urgent           #ec7ea4 #eb709b #ffffff #eb709b
-
-# $i3-background
-exec_always --no-startup-id xsetroot -solid '#000000'
+# class                 border  backgr. text    indicator
+client.focused          #4E9C00 #4E9C00 #FFFFFF #FFFFFF
+client.focused_inactive #1B3600 #1B3600 #888888 #FFFFFF
+client.unfocused        #333333 #333333 #888888 #FFFFFF
+client.urgent           #C20000 #C20000 #FFFFFF #FFFFFF
 
